<resources>
    <string name="app_name">app04</string>
    <string name="str1">Input RMB</string>
    <string name="str2">Hello</string>
    <string name="str3">DORLLAR</string>
    <string name="str4">EURO</string>
    <string name="str5">WON</string>
    <string name="save">SAVE</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>