<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/num"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:gravity="center"
            android:hint="@string/str1"
            android:shadowColor="@android:color/holo_orange_light"
            android:textColorHighlight="@android:color/holo_red_dark"
            android:textColorHint="@android:color/holo_blue_light"
            android:textColorLink="@android:color/holo_green_light" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:gravity="center"
            android:text="@string/str2"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:gravity="center"
                android:onClick="allbtn"
                android:text="@string/str3" />

            <Button
                android:id="@+id/button2"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:gravity="center"
                android:onClick="allbtn"
                android:text="@string/str4" />

            <Button
                android:id="@+id/button3"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:gravity="center"
                android:onClick="allbtn"
                android:text="@string/str5" />

            <Button
                android:id="@+id/CONFIG"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:onClick="change"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:gravity="center"
                android:text="CONFIG" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="abc"
                android:text="update" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>